# keiba

./: .env  .env.sample  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: scraper-unit-tests.yml  unit-test.yml
keiba/: .env  Pipfile
keiba/keiba/: base.py  db.py  utils.py
keiba/test/unit_test/: test_sample.py
ml/: README.md  main.py
ml/eda/time_distribution/: main.py
ml/keiba/: db.py
postgres/init/: 0_create_database.sql  1_create_jockey_table.sql
scraper/: .env  .env.sample  Cargo.toml  README.md
scraper/.github/workflows/: unit-test.yml
scraper/migrations/2020-06-06-010520_create_jockeys/: down.sql  up.sql
scraper/migrations/2020-06-07-022622_create_races/: down.sql  up.sql
scraper/migrations/2020-06-07-062112_create_race_results/: down.sql  up.sql
scraper/src/: lib.rs  postgres.rs  schema.rs
scraper/src/jockey/: jockey.html  jockey_scraped.html  mod.rs  model.rs  models.rs  request.rs  scrape_jockey.rs  scrape_jockey_leading.rs
scraper/src/race/: mod.rs  model.rs  scrape_old_race_list.rs  scrape_race.rs  scrape_race_calendar.rs  scrape_race_list.rs  scrape_race_result.rs
scraper/src/utils/: sleep.rs
script/: init.sh  start.sh
