[package]
name = "scraper"
version = "0.1.0"
authors = ["kiccho1101 <youodf11khp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
reqwest = {version = "0.10.6", features = ["json"]}
tokio = {version = "0.2.21", features = ["full"]}
select = "0.4.3"
