[package]
name = "scraper"
version = "0.1.0"
authors = ["kiccho1101 <youodf11khp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
reqwest = {version = "*", features = ["json"]}
tokio = {version = "*", features = ["full"]}
select = "*"
regex = "*"
lazy_static = "*"
encoding_rs = "*"